[package]
name = "draugur"
version = "0.1.0"
edition = "2024"
description = "A Discord bot that fetches kills from the Zkillboard RedisQ feed"
readme = "README.md"
repository = "https://github.com/itsTykho/draugur"

[dependencies]
chrono = "0.4.33"
colog = "1.3.0"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serde_with = "3.5.1"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "framework",
    "standard_framework",
] }
tokio = { version = "*", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.37"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
